--- a/MPI_2018.Rmd
+++ b/MPI_2018.Rmd
@@ -3,16 +3,141 @@ title: "MPI 2018 Urban and Rural areas"
 output: html_notebook
 ---
 
-```{r}
+---
+title: "MPI 2018 Urban and Rural areas"
+output:
+  html_document:
+    df_print: paged
+  word_document: default
+---
+
+Note: data for Armenia(urban) removed for zeros and NA values in all the variables pertinent for analysis
+```{r Loading packages, echo=FALSE}
 library(ggplot2)
 library(readr)
-setwd("R")
-getwd()
+library(dplyr)
+library(magrittr)
+library(lsr)
+library(qcc)
 ```
 
-```{r}
-setwd(".")
+```{r echo=FALSE}
 poverty <- read_csv("Rural-Urban-MPI-2018.csv", skip=4)
-new_names <- names(poverty[-c(1, 2, 5, 8, 9, 15:19, 23, 26)])
-new_names
+
+
+# cleaning up the data and making the df more readable
+
+# remove unwanted/unnecessary rows and columns
+poverty <- poverty[(-c(1,2,3,4,13,215,216,217,218,219,220)),
+                   (-c(1, 2, 5, 8, 9, 15, 17:22, 23, 26))]
+
+# vector of new variable names I want to use to replace old ones
+new.var.names <- c("Country", "World Region", "Year", "Area",
+                   "MPI by area (H*A)", "Headcount Ratio (H)",
+                   "Intensity of Deprivation (%)(A)",
+                   "Vulnerable to Poverty", "Severe Poverty",
+                   "Total Pop. by Country",
+                   "Indicators Included", "Indicator(s) Missing")
+
+# making the change to new variable names
+names(poverty) <- new.var.names
+
+#  changing these character columns to numeric ones
+poverty[5:9] <- as.numeric(unlist(poverty[5:9]))
+poverty$`Total Pop. by Country`<- as.numeric(gsub(",","",poverty$`Total Pop. by Country`))
+#  double check to make sure the column types changed
+str(poverty)
 ```
+
+
+```{r}
+regions_factor <- as.factor(poverty$`World Region`)
+regions_level <- levels(regions_factor)
+regions_level  # Note the levels are 1-Arab States, 2-East Asia and the Pacific, 3-Europe and Central
+# Asia, 4-Latin America and Caribbean, 5-South Asia, 6-Sub-Saharan Africa
+# make a function so you can easily find the mean headcount ratio for each region by
+# using levels
+
+mean_region <- function(level) {
+    mean_hdct_reg <- mean(poverty$`Headcount Ratio (H)`
+                          [poverty$`World Region`==regions_level[level]])
+    #print(mean_hdct_reg)
+}
+for (i in seq_along(regions_level)) {
+  print(paste("The mean headcount ratio for all areas in", regions_level[i], "is",
+                round(mean_region(i), digits = 1)))
+}
+```
+
+It appears that mean headcount ratios for all regions are significantly different from one another. The means that are most close to each other are for Arab States and East Asia and the Pacific. It may be worth doing a t-test to see if the means are significantly different from each other:
+
+```{r}
+qnorm(0.975)
+t.test(poverty$`Headcount Ratio (H)`[poverty$`World Region`=="Arab States"],poverty$`Headcount Ratio (H)`[poverty$`World Region`=="East Asia and the Pacific"], mu=0, conf.level=0.95)
+```
+P-value is high, and our test statistic falls short of the "critical region." We cannot reject the null hypothesis. There is no significant difference between means of headcount ratios for the two world regions. 
+
+
+
+Another hypothesis test to perform is comparing intensity of deprivation in rural and urban areas of all countries represented in the data.
+```{r}
+# is there a significant differnce in acute poverty between rural and urban areas?
+mean_r <- mean(poverty$`Headcount Ratio (H)`
+               [poverty$Area=="Rural"])
+mean_u <- mean(poverty$`Headcount Ratio (H)`
+               [poverty$Area=="Urban"])
+print(paste("The mean proportion of households in rural areas facing acute poverty is",
+            round(mean_r, digits = 1)))
+print(paste("The mean proportion of households in urban areas facing acute poverty is",
+            round(mean_u, digits = 1)))
+# Yes there is a significant difference.
+```
+
+
+```{r}
+# what about intensity of deprivation?
+round(mean(poverty$`Intensity of Deprivation (%)(A)`[poverty$Area=="Rural"],digits=1))
+round(mean(poverty$`Intensity of Deprivation (%)(A)`[poverty$Area=="Urban"],digits=1))
+
+
+# might be more interesting to see the difference in intensity of deprivation between
+# rural and urban areas for all the countries:
+#alpha = 0.05
+#qnorm(0.975)
+t.test(poverty$`Intensity of Deprivation (%)(A)`[poverty$Area=="Rural"],poverty$`Intensity of Deprivation (%)(A)`[poverty$Area=="Urban"], mu=0, conf.level=0.95)
+```
+The difference in proportion of urban and rural areas in acute poverty is obviously significant, therefore it seems trivial to do a t-test here.
+
+The difference between the means of intensity of deprivation in rural and urban areas appears to be significant, but it is much less obviously so as the difference between headcount ratios. 
+
+The t-test does show that there is a significant difference in intensity of deprivation between urban and rural areas.
+
+
+Plot of deprivation vs headcount in all regions for both rural and urban areas:
+```{r}
+p1 <- ggplot(poverty, aes(`Headcount Ratio (H)`,
+                 `Intensity of Deprivation (%)(A)`)) +
+geom_point(aes(colour=factor(`Area`)), size=1) + facet_wrap(~`World Region`) + 
+  geom_smooth(method="lm") +
+  ggtitle("Intensity of Deprivation vs. Headcount Ratio in All World Regions 
+          By Area (Rural and Urban)")
+p1
+
+# does a linear model work for Arab States and Sub-Saharan Africa data?
+a <- lm(poverty$`Intensity of Deprivation (%)(A)`[poverty$`World Region`=="Arab States"]~poverty$`Headcount Ratio (H)`[poverty$`World Region`=="Arab States"])
+s <- lm(poverty$`Intensity of Deprivation (%)(A)`[poverty$`World Region`=="Sub-Saharan Africa"]~poverty$`Headcount Ratio (H)`[poverty$`World Region`=="Sub-Saharan Africa"])
+# looking at residuals plot for both models, as well as histograms of residuals
+
+plot(residuals(a), main="Plot of Residuals for Linear Model of Arab States Data")
+abline(h=0)
+plot(residuals(s), main="Plot of Residuals for Linear MOdel of Sub-Saharan Africa Data")
+abline(h=0)
+hist(residuals(a), main="Histogram of Residuals of Linear Model\n
+     for Arab States Data")
+hist(residuals(s), main="Histogram of Residuals of Linear Model\n
+     for Sub-Saharan Data")
+```
+It seems the linear model for Sub-Saharan Africa data is a decent model, but not so good for Arab States data.
+
+
+
