--- a/MPI_2018.Rmd
+++ b/MPI_2018.Rmd
@@ -69,17 +69,22 @@ for (i in seq_along(regions_level)) {
 }
 ```
 
-It appears that mean headcount ratios for all regions are significantly different from one another. The means that are most close to each other are for Arab States and East Asia and the Pacific. It may be worth doing a t-test to see if the means are significantly different from each other:
+It appears that mean headcount ratios for all regions are significantly different from one another. 
+The means that are most close to each other are for Arab States and East Asia and the Pacific. 
+It may be worth doing a t-test to see if the means are significantly different from each other:
 
 ```{r}
 qnorm(0.975)
-t.test(poverty$`Headcount Ratio (H)`[poverty$`World Region`=="Arab States"],poverty$`Headcount Ratio (H)`[poverty$`World Region`=="East Asia and the Pacific"], mu=0, conf.level=0.95)
+t.test(poverty$`Headcount Ratio (H)`[poverty$`World Region`=="Arab States"],
+poverty$`Headcount Ratio (H)`[poverty$`World Region`=="East Asia and the Pacific"], mu=0, conf.level=0.95)
 ```
-P-value is high, and our test statistic falls short of the "critical region." We cannot reject the null hypothesis. There is no significant difference between means of headcount ratios for the two world regions. 
+P-value is high, and our test statistic falls short of the "critical region." We cannot reject the null hypothesis. 
+There is no significant difference between means of headcount ratios for the two world regions. 
 
 
+Another hypothesis test to perform is comparing intensity of deprivation in rural and urban areas 
+of all countries represented in the data.
 
-Another hypothesis test to perform is comparing intensity of deprivation in rural and urban areas of all countries represented in the data.
 ```{r}
 # is there a significant differnce in acute poverty between rural and urban areas?
 mean_r <- mean(poverty$`Headcount Ratio (H)`
@@ -104,11 +109,14 @@ round(mean(poverty$`Intensity of Deprivation (%)(A)`[poverty$Area=="Urban"],digi
 # rural and urban areas for all the countries:
 #alpha = 0.05
 #qnorm(0.975)
-t.test(poverty$`Intensity of Deprivation (%)(A)`[poverty$Area=="Rural"],poverty$`Intensity of Deprivation (%)(A)`[poverty$Area=="Urban"], mu=0, conf.level=0.95)
+t.test(poverty$`Intensity of Deprivation (%)(A)`[poverty$Area=="Rural"],
+poverty$`Intensity of Deprivation (%)(A)`[poverty$Area=="Urban"], mu=0, conf.level=0.95)
 ```
-The difference in proportion of urban and rural areas in acute poverty is obviously significant, therefore it seems trivial to do a t-test here.
+The difference in proportion of urban and rural areas in acute poverty is obviously significant, 
+therefore it seems trivial to do a t-test here.
 
-The difference between the means of intensity of deprivation in rural and urban areas appears to be significant, but it is much less obviously so as the difference between headcount ratios. 
+The difference between the means of intensity of deprivation in rural and urban areas appears 
+to be significant, but it is much less obviously so as the difference between headcount ratios. 
 
 The t-test does show that there is a significant difference in intensity of deprivation between urban and rural areas.
 
@@ -124,8 +132,10 @@ geom_point(aes(colour=factor(`Area`)), size=1) + facet_wrap(~`World Region`) +
 p1
 
 # does a linear model work for Arab States and Sub-Saharan Africa data?
-a <- lm(poverty$`Intensity of Deprivation (%)(A)`[poverty$`World Region`=="Arab States"]~poverty$`Headcount Ratio (H)`[poverty$`World Region`=="Arab States"])
-s <- lm(poverty$`Intensity of Deprivation (%)(A)`[poverty$`World Region`=="Sub-Saharan Africa"]~poverty$`Headcount Ratio (H)`[poverty$`World Region`=="Sub-Saharan Africa"])
+a <- lm(poverty$`Intensity of Deprivation (%)(A)`[poverty$`World Region`=="Arab States"]~
+poverty$`Headcount Ratio (H)`[poverty$`World Region`=="Arab States"])
+s <- lm(poverty$`Intensity of Deprivation (%)(A)`[poverty$`World Region`=="Sub-Saharan Africa"]~
+poverty$`Headcount Ratio (H)`[poverty$`World Region`=="Sub-Saharan Africa"])
 # looking at residuals plot for both models, as well as histograms of residuals
 
 plot(residuals(a), main="Plot of Residuals for Linear Model of Arab States Data")
@@ -138,6 +148,3 @@ hist(residuals(s), main="Histogram of Residuals of Linear Model\n
      for Sub-Saharan Data")
 ```
 It seems the linear model for Sub-Saharan Africa data is a decent model, but not so good for Arab States data.
-
-
-
